Make effective priority calculation more readable